fix: flex body doesn't work on Safari

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -69,7 +69,7 @@ a {
     text-decoration: none;
 }
 
-body {
+#wrapper {
     background-color: #FAFAFA;
     display: flex;
     flex-direction: column;
